[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sil*"]

[project]
name = "ebike-mc-sil"
version = "0.1.0"
description = "SIL verification environment for the e-bike Motor Controller."
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["sil/tests"]
markers = ["uc05: tests covering UC-05 Ride with Pedal Assist"]

[tool.ruff]
line-length = 100
